Nav - all breakpoints

--- a/index.html
+++ b/index.html
@@ -9,48 +9,70 @@
 
   <title>Frontend Mentor | Skilled e-learning landing page</title>
 
+  <!-- Google Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;700;800&display=swap"
+    rel="stylesheet">
+
   <link rel="stylesheet" href="./dist/style.css">
 </head>
 
-<body>
+<body class="font-jakarta min-h-screen">
 
-  Get Started
+  <div class="wrapper h-full">
+    <div class="bg-gradient-to-b from-white to-indigo-50 absolute top-0 left-0 w-full h-full z-[-10]"></div>
+    <div
+      class="container px-4 pt-4 max-w-[400px] mx-auto md:px-10 md:max-w-max md:pt-6 lg:pt-[38px] lg:max-w-[1100px] xl:px-0">
+      <div class="nav flex items-center justify-between">
+        <div class="img-container">
+          <img src="./dist/assets/logo-dark.svg" alt="" class="w-[90px] lg:w-[117px]">
+        </div>
+        <button
+          class="bg-customPrimaryDark px-6 font-bold leading-7 text-white rounded-full py-[10px] lg:text-lg lg:py-[14px] lg:px-8">
+          Get Started
+        </button>
+      </div>
 
-  Maximize skill, minimize budget
+      Maximize skill, minimize budget
 
-  Our modern courses across a range of in-demand skills will give you the
-  knowledge you need to live the life you want.
+      Our modern courses across a range of in-demand skills will give you the
+      knowledge you need to live the life you want.
 
-  Get Started
+      Get Started
 
-  Check out our most popular courses!
+      Check out our most popular courses!
 
-  Animation
-  Learn the latest animation techniques to create stunning motion
-  design and captivate your audience.
-  Get Started
+      Animation
+      Learn the latest animation techniques to create stunning motion
+      design and captivate your audience.
+      Get Started
 
-  Design
-  Create beautiful, usable interfaces to help shape the future of
-  how the web looks.
-  Get Started
+      Design
+      Create beautiful, usable interfaces to help shape the future of
+      how the web looks.
+      Get Started
 
-  Photography
-  Explore critical fundamentals like lighting, composition, and focus
-  to capture exceptional photos.
-  Get Started
+      Photography
+      Explore critical fundamentals like lighting, composition, and focus
+      to capture exceptional photos.
+      Get Started
 
-  Crypto
-  All you need to know to get started investing in crypto. Go from beginner
-  to advanced with this 54 hour course.
-  Get Started
+      Crypto
+      All you need to know to get started investing in crypto. Go from beginner
+      to advanced with this 54 hour course.
+      Get Started
 
-  Business
-  A step-by-step playbook to help you start, scale, and sustain your business
-  without outside investment.
-  Get Started
+      Business
+      A step-by-step playbook to help you start, scale, and sustain your business
+      without outside investment.
+      Get Started
 
-  Get Started
+      Get Started
+    </div>
+
+
+  </div>
 
 </body>
 
