--- a/index.html
+++ b/index.html
@@ -20,11 +20,10 @@
 
 <body class="font-jakarta min-h-screen">
 
-  <div class="wrapper h-full">
-    <div class="bg-gradient-to-b from-white to-indigo-50 absolute top-0 left-0 w-full h-full z-[-10]"></div>
-    <div
-      class="container px-4 pt-4 max-w-[400px] mx-auto md:px-10 md:max-w-max md:pt-6 lg:pt-[38px] lg:max-w-[1100px] xl:px-0">
-      <div class="nav flex items-center justify-between">
+  <div class="wrapper bg-gradient-to-b from-white to-indigo-50 h-full">
+    <div class=" absolute top-0 left-0 w-full h-full z-[-10]"></div>
+    <div class="container max-w-[400px] mx-auto  md:max-w-max  lg:max-w-[1100px] ">
+      <div class="nav flex items-center justify-between px-4 pt-4 md:px-10 md:pt-6 lg:pt-[38px] xl:px-0">
         <div class="img-container">
           <img src="./dist/assets/logo-dark.svg" alt="" class="w-[90px] lg:w-[117px]">
         </div>
@@ -33,45 +32,88 @@
           Get Started
         </button>
       </div>
+      <header class="header flex flex-col gap-[46px]">
+        <div class="header-container flex flex-col items-start px-4 pt-4 md:px-10 md:pt-6 lg:pt-[38px] xl:px-0">
+          <h1 class="header-title text-[40px] font-extrabold leading-[51px] text-left text-customPrimaryDark"> Maximize
+            skill, minimize budget
+          </h1>
 
-      Maximize skill, minimize budget
+          <p class="header-text font-medium leading-[26px] text-customPrimaryLight text-left mt-[26px]">Our modern
+            courses across
+            a range of
+            in-demand skills will
+            give you the
+            knowledge you need to live the life you want.</p>
 
-      Our modern courses across a range of in-demand skills will give you the
-      knowledge you need to live the life you want.
+          <button
+            class="leading-[26px] font-bold px-[38px] py-[15px] text-white bg-gradient-to-b from-customGradientOrange to-customGradientPink rounded-full mt-6">Get
+            Started</button>
+        </div>
+        <div class="header-img">
+          <picture>
+            <img src="./dist/assets/images/image-hero-mobile.png" alt="" class="">
+          </picture>
+        </div>
+      </header>
 
-      Get Started
-
-      Check out our most popular courses!
-
-      Animation
-      Learn the latest animation techniques to create stunning motion
-      design and captivate your audience.
-      Get Started
-
-      Design
-      Create beautiful, usable interfaces to help shape the future of
-      how the web looks.
-      Get Started
-
-      Photography
-      Explore critical fundamentals like lighting, composition, and focus
-      to capture exceptional photos.
-      Get Started
-
-      Crypto
-      All you need to know to get started investing in crypto. Go from beginner
-      to advanced with this 54 hour course.
-      Get Started
-
-      Business
-      A step-by-step playbook to help you start, scale, and sustain your business
-      without outside investment.
-      Get Started
-
-      Get Started
+      <div class="cards px-4 space-y-10">
+        <div
+          class="card rounded-[10px] bg-gradient-to-b from-customGradientOrange to-customGradientPink px-7 pt-6 pb-8">
+          <p class="text-2xl font-extrabold leading-8 text-white">Check out our most popular courses!</p>
+        </div>
+        <div class="card bg-white rounded-[10px] px-7 pb-8 pt-14 relative">
+          <img src="./dist/assets/icon-animation.svg" alt="" class="h-aut0 -top-6 left-7 absolute">
+          <h2 class="text-customPrimaryDark text-xl font-extrabold">Animation</h2>
+          <p class="leading-[26px] mt-4 text-customPrimaryLight font-medium  text-left text-base tracking-[-0.01em]">
+            Learn the latest animation techniques to create stunning motion design and captivate our audience.</p>
+          <button class="card-btn text-customPink mt-6 text-lg font-bold leading-7">Get Started</button>
+        </div>
+        <div class="card bg-white rounded-[10px] px-7 pb-8 pt-14 relative">
+          <img src="./dist/assets/icon-design.svg" alt="" class="h-aut0 -top-6 left-7 absolute">
+          <h2 class="text-customPrimaryDark text-xl font-extrabold">Design
+          </h2>
+          <p class="leading-[26px] mt-4 text-customPrimaryLight font-medium  text-left text-base tracking-[-0.01em]">
+            Create beautiful, usable interfaces to help shape the future of
+            how the web looks.</p>
+          <button class="card-btn text-customPink mt-6 text-lg font-bold leading-7">Get Started</button>
+        </div>
+        <div class="card bg-white rounded-[10px] px-7 pb-8 pt-14 relative">
+          <img src="./dist/assets/icon-photography.svg" alt="" class="h-aut0 -top-6 left-7 absolute">
+          <h2 class="text-customPrimaryDark text-xl font-extrabold"> Photography
+          </h2>
+          <p class="leading-[26px] mt-4 text-customPrimaryLight font-medium  text-left text-base tracking-[-0.01em]">
+            Explore critical fundamentals like lighting, composition, and focus
+            to capture exceptional photos.</p>
+          <button class="card-btn text-customPink mt-6 text-lg font-bold leading-7">Get Started</button>
+        </div>
+        <div class="card bg-white rounded-[10px] px-7 pb-8 pt-14 relative">
+          <img src="./dist/assets/icon-crypto.svg" alt="" class="h-aut0 -top-6 left-7 absolute">
+          <h2 class="text-customPrimaryDark text-xl font-extrabold"> Crypto
+          </h2>
+          <p class="leading-[26px] mt-4 text-customPrimaryLight font-medium  text-left text-base tracking-[-0.01em]">
+            All you need to know to get started investing in crypto. Go from beginner
+            to advanced with this 54 hour course.</p>
+          <button class="card-btn text-customPink mt-6 text-lg font-bold leading-7">Get Started</button>
+        </div>
+        <div class="card bg-white rounded-[10px] px-7 pb-8 pt-14 relative">
+          <img src="./dist/assets/icon-animation.svg" alt="" class="h-aut0 -top-6 left-7 absolute">
+          <h2 class="text-customPrimaryDark text-xl font-extrabold">Business</h2>
+          <p class="leading-[26px] mt-4 text-customPrimaryLight font-medium  text-left text-base tracking-[-0.01em]">
+            A step-by-step playbook to help you start, scale, and sustain your business
+            without outside investment.</p>
+          <button class="card-btn text-customPink mt-6 text-lg font-bold leading-7">Get Started</button>
+        </div>
+      </div>
+      <footer class="footer h-[120px] w-full flex items-center justify-between px-4 bg-customPrimaryDark mt-20">
+        <div class="img-container logo-light">
+          <img src="./dist/assets/logo-light.svg" alt="" class="w-[90px] lg:w-[117px]">
+        </div>
+        <button
+          class="bg-gradient-to-b from-customGradientBlue to-customGradientPink px-6 font-bold leading-7 text-white rounded-full py-[10px] lg:text-lg lg:py-[14px] lg:px-8">
+          Get Started
+        </button>
+      </footer>
     </div>
-
-
   </div>
 
 </body>
