--- a/index.html
+++ b/index.html
@@ -1,121 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png" />
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+    <title>Frontend Mentor | Skilled e-learning landing page</title>
 
-  <title>Frontend Mentor | Skilled e-learning landing page</title>
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;700;800&display=swap"
+      rel="stylesheet"
+    />
 
-  <!-- Google Fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@500;700;800&display=swap"
-    rel="stylesheet">
+    <link rel="stylesheet" href="./dist/style.css" />
+  </head>
 
-  <link rel="stylesheet" href="./dist/style.css">
-</head>
-
-<body class="font-jakarta min-h-screen">
-
-  <div class="wrapper bg-gradient-to-b from-white to-indigo-50 h-full">
-    <div class=" absolute top-0 left-0 w-full h-full z-[-10]"></div>
-    <div class="container max-w-[400px] mx-auto  md:max-w-max  lg:max-w-[1100px] ">
-      <div class="nav flex items-center justify-between px-4 pt-4 md:px-10 md:pt-6 lg:pt-[38px] xl:px-0">
-        <div class="img-container">
-          <img src="./dist/assets/logo-dark.svg" alt="" class="w-[90px] lg:w-[117px]">
-        </div>
-        <button
-          class="bg-customPrimaryDark px-6 font-bold leading-7 text-white rounded-full py-[10px] lg:text-lg lg:py-[14px] lg:px-8">
-          Get Started
-        </button>
-      </div>
-      <header class="header flex flex-col gap-[46px]">
-        <div class="header-container flex flex-col items-start px-4 pt-4 md:px-10 md:pt-6 lg:pt-[38px] xl:px-0">
-          <h1 class="header-title text-[40px] font-extrabold leading-[51px] text-left text-customPrimaryDark"> Maximize
-            skill, minimize budget
-          </h1>
-
-          <p class="header-text font-medium leading-[26px] text-customPrimaryLight text-left mt-[26px]">Our modern
-            courses across
-            a range of
-            in-demand skills will
-            give you the
-            knowledge you need to live the life you want.</p>
-
+  <body class="min-h-screen font-jakarta">
+    <div class="h-full overflow-hidden wrapper bg-gradient-to-b from-white to-indigo-50">
+      <div class="container max-w-[500px] mx-auto md:max-w-max lg:max-w-[1100px]">
+        <div class="nav flex items-center justify-between px-4 pt-4 md:px-10 md:pt-6 lg:pt-[38px] xl:px-0">
+          <div class="img-container">
+            <img src="./dist/assets/logo-dark.svg" alt="" class="w-[90px] lg:w-[117px]" />
+          </div>
           <button
-            class="leading-[26px] font-bold px-[38px] py-[15px] text-white bg-gradient-to-b from-customGradientOrange to-customGradientPink rounded-full mt-6">Get
-            Started</button>
+            class="bg-customPrimaryDark px-6 font-bold leading-7 text-white rounded-full py-[10px] lg:text-lg lg:py-[14px] lg:px-8"
+          >
+            Get Started
+          </button>
         </div>
-        <div class="header-img">
-          <picture>
-            <img src="./dist/assets/images/image-hero-mobile.png" alt="" class="">
-          </picture>
-        </div>
-      </header>
+        <header class="header flex flex-col md:flex-row gap-[46px] relative">
+          <div
+            class="flex flex-col items-start px-4 pt-[38px] sm:pt-[99px] header-container md:px-0 md:pl-10 md:pb-[186px] md:w-[440px]"
+          >
+            <h1 class="header-title text-[40px] font-extrabold leading-[51px] text-left text-customPrimaryDark">
+              Maximize skill, minimize budget
+            </h1>
 
-      <div class="cards px-4 space-y-10">
-        <div
-          class="card rounded-[10px] bg-gradient-to-b from-customGradientOrange to-customGradientPink px-7 pt-6 pb-8">
-          <p class="text-2xl font-extrabold leading-8 text-white">Check out our most popular courses!</p>
-        </div>
-        <div class="card bg-white rounded-[10px] px-7 pb-8 pt-14 relative">
-          <img src="./dist/assets/icon-animation.svg" alt="" class="h-aut0 -top-6 left-7 absolute">
-          <h2 class="text-customPrimaryDark text-xl font-extrabold">Animation</h2>
-          <p class="leading-[26px] mt-4 text-customPrimaryLight font-medium  text-left text-base tracking-[-0.01em]">
-            Learn the latest animation techniques to create stunning motion design and captivate our audience.</p>
-          <button class="card-btn text-customPink mt-6 text-lg font-bold leading-7">Get Started</button>
-        </div>
-        <div class="card bg-white rounded-[10px] px-7 pb-8 pt-14 relative">
-          <img src="./dist/assets/icon-design.svg" alt="" class="h-aut0 -top-6 left-7 absolute">
-          <h2 class="text-customPrimaryDark text-xl font-extrabold">Design
-          </h2>
-          <p class="leading-[26px] mt-4 text-customPrimaryLight font-medium  text-left text-base tracking-[-0.01em]">
-            Create beautiful, usable interfaces to help shape the future of
-            how the web looks.</p>
-          <button class="card-btn text-customPink mt-6 text-lg font-bold leading-7">Get Started</button>
-        </div>
-        <div class="card bg-white rounded-[10px] px-7 pb-8 pt-14 relative">
-          <img src="./dist/assets/icon-photography.svg" alt="" class="h-aut0 -top-6 left-7 absolute">
-          <h2 class="text-customPrimaryDark text-xl font-extrabold"> Photography
-          </h2>
-          <p class="leading-[26px] mt-4 text-customPrimaryLight font-medium  text-left text-base tracking-[-0.01em]">
-            Explore critical fundamentals like lighting, composition, and focus
-            to capture exceptional photos.</p>
-          <button class="card-btn text-customPink mt-6 text-lg font-bold leading-7">Get Started</button>
-        </div>
-        <div class="card bg-white rounded-[10px] px-7 pb-8 pt-14 relative">
-          <img src="./dist/assets/icon-crypto.svg" alt="" class="h-aut0 -top-6 left-7 absolute">
-          <h2 class="text-customPrimaryDark text-xl font-extrabold"> Crypto
-          </h2>
-          <p class="leading-[26px] mt-4 text-customPrimaryLight font-medium  text-left text-base tracking-[-0.01em]">
-            All you need to know to get started investing in crypto. Go from beginner
-            to advanced with this 54 hour course.</p>
-          <button class="card-btn text-customPink mt-6 text-lg font-bold leading-7">Get Started</button>
-        </div>
-        <div class="card bg-white rounded-[10px] px-7 pb-8 pt-14 relative">
-          <img src="./dist/assets/icon-animation.svg" alt="" class="h-aut0 -top-6 left-7 absolute">
-          <h2 class="text-customPrimaryDark text-xl font-extrabold">Business</h2>
-          <p class="leading-[26px] mt-4 text-customPrimaryLight font-medium  text-left text-base tracking-[-0.01em]">
-            A step-by-step playbook to help you start, scale, and sustain your business
-            without outside investment.</p>
-          <button class="card-btn text-customPink mt-6 text-lg font-bold leading-7">Get Started</button>
+            <p class="header-text font-medium leading-[26px] text-customPrimaryLight text-left mt-[26px]">
+              Our modern courses across a range of in-demand skills will give you the knowledge you need to live the
+              life you want.
+            </p>
+
+            <button
+              class="leading-[26px] font-bold px-[38px] py-[15px] text-white bg-gradient-to-b from-customGradientOrange to-customGradientPink rounded-full mt-6"
+            >
+              Get Started
+            </button>
+          </div>
+          <div class="md:absolute header-img md:right-[-17rem] md:top-[-7rem] md:min-w-[640px] md:h-[640px]">
+            <picture class="">
+              <source media="(min-width:768px)" srcset="./dist/assets/images/image-hero-tablet.png" />
+              <source media="(min-width:400px)" srcset="./dist/assets/image-hero-mobile@2x.png" />
+              <img src="./dist/assets/image-hero-mobile@2x.png" alt="" class="w-full h-full scale-110 md:scale-105" />
+            </picture>
+          </div>
+        </header>
+
+        <div class="px-4 space-y-10 cards">
+          <div
+            class="card rounded-[10px] bg-gradient-to-b from-customGradientOrange to-customGradientPink px-7 pt-6 pb-8"
+          >
+            <p class="text-2xl font-extrabold leading-8 text-white">Check out our most popular courses!</p>
+          </div>
+          <div class="card bg-white rounded-[10px] px-7 pb-8 pt-14 relative">
+            <img src="./dist/assets/icon-animation.svg" alt="" class="absolute h-aut0 -top-6 left-7" />
+            <h2 class="text-xl font-extrabold text-customPrimaryDark">Animation</h2>
+            <p class="leading-[26px] mt-4 text-customPrimaryLight font-medium text-left text-base tracking-[-0.01em]">
+              Learn the latest animation techniques to create stunning motion design and captivate our audience.
+            </p>
+            <button class="mt-6 text-lg font-bold leading-7 card-btn text-customPink">Get Started</button>
+          </div>
+          <div class="card bg-white rounded-[10px] px-7 pb-8 pt-14 relative">
+            <img src="./dist/assets/icon-design.svg" alt="" class="absolute h-aut0 -top-6 left-7" />
+            <h2 class="text-xl font-extrabold text-customPrimaryDark">Design</h2>
+            <p class="leading-[26px] mt-4 text-customPrimaryLight font-medium text-left text-base tracking-[-0.01em]">
+              Create beautiful, usable interfaces to help shape the future of how the web looks.
+            </p>
+            <button class="mt-6 text-lg font-bold leading-7 card-btn text-customPink">Get Started</button>
+          </div>
+          <div class="card bg-white rounded-[10px] px-7 pb-8 pt-14 relative">
+            <img src="./dist/assets/icon-photography.svg" alt="" class="absolute h-aut0 -top-6 left-7" />
+            <h2 class="text-xl font-extrabold text-customPrimaryDark">Photography</h2>
+            <p class="leading-[26px] mt-4 text-customPrimaryLight font-medium text-left text-base tracking-[-0.01em]">
+              Explore critical fundamentals like lighting, composition, and focus to capture exceptional photos.
+            </p>
+            <button class="mt-6 text-lg font-bold leading-7 card-btn text-customPink">Get Started</button>
+          </div>
+          <div class="card bg-white rounded-[10px] px-7 pb-8 pt-14 relative">
+            <img src="./dist/assets/icon-crypto.svg" alt="" class="absolute h-aut0 -top-6 left-7" />
+            <h2 class="text-xl font-extrabold text-customPrimaryDark">Crypto</h2>
+            <p class="leading-[26px] mt-4 text-customPrimaryLight font-medium text-left text-base tracking-[-0.01em]">
+              All you need to know to get started investing in crypto. Go from beginner to advanced with this 54 hour
+              course.
+            </p>
+            <button class="mt-6 text-lg font-bold leading-7 card-btn text-customPink">Get Started</button>
+          </div>
+          <div class="card bg-white rounded-[10px] px-7 pb-8 pt-14 relative">
+            <img src="./dist/assets/icon-animation.svg" alt="" class="absolute h-aut0 -top-6 left-7" />
+            <h2 class="text-xl font-extrabold text-customPrimaryDark">Business</h2>
+            <p class="leading-[26px] mt-4 text-customPrimaryLight font-medium text-left text-base tracking-[-0.01em]">
+              A step-by-step playbook to help you start, scale, and sustain your business without outside investment.
+            </p>
+            <button class="mt-6 text-lg font-bold leading-7 card-btn text-customPink">Get Started</button>
+          </div>
         </div>
       </div>
       <footer class="footer h-[120px] w-full flex items-center justify-between px-4 bg-customPrimaryDark mt-20">
         <div class="img-container logo-light">
-          <img src="./dist/assets/logo-light.svg" alt="" class="w-[90px] lg:w-[117px]">
+          <img src="./dist/assets/logo-light.svg" alt="" class="w-[90px] lg:w-[117px]" />
         </div>
         <button
-          class="bg-gradient-to-b from-customGradientBlue to-customGradientPink px-6 font-bold leading-7 text-white rounded-full py-[10px] lg:text-lg lg:py-[14px] lg:px-8">
+          class="bg-gradient-to-b from-customGradientBlue to-customGradientPink px-6 font-bold leading-7 text-white rounded-full py-[10px] lg:text-lg lg:py-[14px] lg:px-8"
+        >
           Get Started
         </button>
       </footer>
     </div>
-  </div>
-
-</body>
-
+  </body>
 </html>
