--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <img src="./dist/assets/logo-dark.svg" alt="" class="w-[90px] lg:w-[117px]" />
           </div>
           <button
-            class="bg-customPrimaryDark px-6 font-bold leading-7 text-white rounded-full py-[10px] lg:text-lg lg:py-[14px] lg:px-8"
+            class="bg-customPrimaryDark px-6 font-bold leading-7 text-white rounded-full py-[10px] lg:text-lg lg:py-[14px] lg:px-8 hover:bg-customBlue transition-all z-10"
           >
             Get Started
           </button>
@@ -46,7 +46,7 @@
             </p>
 
             <button
-              class="leading-[26px] font-bold px-[38px] py-[15px] text-white bg-gradient-to-b from-customGradientOrange to-customGradientPink rounded-full mt-6"
+              class="leading-[26px] font-bold px-[38px] py-[15px] text-white bg-gradient-to-b from-customGradientOrange to-customGradientPink rounded-full mt-6 hover:opacity-50 transition-all"
             >
               Get Started
             </button>
@@ -74,7 +74,11 @@
             <p class="leading-[26px] mt-4 text-customPrimaryLight font-medium text-left text-base tracking-[-0.01em]">
               Learn the latest animation techniques to create stunning motion design and captivate our audience.
             </p>
-            <button class="mt-6 text-lg font-bold leading-7 card-btn text-customPink">Get Started</button>
+            <button
+              class="mt-6 text-lg font-bold leading-7 transition-colors card-btn text-customPink hover:text-customPinkLight"
+            >
+              Get Started
+            </button>
           </div>
           <div class="card bg-white rounded-[10px] px-7 pb-8 pt-14 relative">
             <img src="./dist/assets/icon-design.svg" alt="" class="absolute h-aut0 -top-6 left-7" />
@@ -82,7 +86,11 @@
             <p class="leading-[26px] mt-4 text-customPrimaryLight font-medium text-left text-base tracking-[-0.01em]">
               Create beautiful, usable interfaces to help shape the future of how the web looks.
             </p>
-            <button class="mt-6 text-lg font-bold leading-7 card-btn text-customPink">Get Started</button>
+            <button
+              class="mt-6 text-lg font-bold leading-7 transition-colors card-btn text-customPink hover:text-customPinkLight"
+            >
+              Get Started
+            </button>
           </div>
           <div class="card bg-white rounded-[10px] px-7 pb-8 pt-14 relative">
             <img src="./dist/assets/icon-photography.svg" alt="" class="absolute h-aut0 -top-6 left-7" />
@@ -90,7 +98,11 @@
             <p class="leading-[26px] mt-4 text-customPrimaryLight font-medium text-left text-base tracking-[-0.01em]">
               Explore critical fundamentals like lighting, composition, and focus to capture exceptional photos.
             </p>
-            <button class="mt-6 text-lg font-bold leading-7 card-btn text-customPink">Get Started</button>
+            <button
+              class="mt-6 text-lg font-bold leading-7 transition-colors card-btn text-customPink hover:text-customPinkLight"
+            >
+              Get Started
+            </button>
           </div>
           <div class="card bg-white rounded-[10px] px-7 pb-8 pt-14 relative">
             <img src="./dist/assets/icon-crypto.svg" alt="" class="absolute h-aut0 -top-6 left-7" />
@@ -99,7 +111,11 @@
               All you need to know to get started investing in crypto. Go from beginner to advanced with this 54 hour
               course.
             </p>
-            <button class="mt-6 text-lg font-bold leading-7 card-btn text-customPink">Get Started</button>
+            <button
+              class="mt-6 text-lg font-bold leading-7 transition-colors card-btn text-customPink hover:text-customPinkLight"
+            >
+              Get Started
+            </button>
           </div>
           <div class="card bg-white rounded-[10px] px-7 pb-8 pt-14 relative">
             <img src="./dist/assets/icon-animation.svg" alt="" class="absolute h-aut0 -top-6 left-7" />
@@ -107,7 +123,11 @@
             <p class="leading-[26px] mt-4 text-customPrimaryLight font-medium text-left text-base tracking-[-0.01em]">
               A step-by-step playbook to help you start, scale, and sustain your business without outside investment.
             </p>
-            <button class="mt-6 text-lg font-bold leading-7 card-btn text-customPink">Get Started</button>
+            <button
+              class="mt-6 text-lg font-bold leading-7 transition-colors card-btn text-customPink hover:text-customPinkLight"
+            >
+              Get Started
+            </button>
           </div>
         </div>
       </div>
@@ -119,9 +139,12 @@
             <img src="./dist/assets/logo-light.svg" alt="" class="w-[90px] lg:w-[117px]" />
           </div>
           <button
-            class="bg-gradient-to-b from-customGradientBlue to-customGradientPink px-6 font-bold leading-7 text-white rounded-full py-[10px] lg:text-lg lg:py-[14px] lg:px-8"
+            class="relative bg-gradient-to-b from-customGradientBlue to-customGradientPink px-6 font-bold leading-7 text-white rounded-full py-[10px] lg:text-lg lg:py-[14px] lg:px-8"
           >
             Get Started
+            <div
+              class="absolute top-0 left-0 z-10 w-full h-full transition-opacity bg-white rounded-full opacity-0 hover:opacity-50"
+            ></div>
           </button>
         </div>
       </footer>
