h1 line-height update :)

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             class="flex flex-col items-start px-4 pt-[38px] sm:pt-[99px] lg:pt-[178px] header-container sm:px-6 md:px-0 md:pl-10 xl:px-0 md:pb-[186px] lg:pb-[210px] md:w-[440px] lg:w-[500px]"
           >
             <h1
-              class="header-title text-[40px] lg:text-[56px] font-extrabold leading-[51px] text-left text-customPrimaryDark"
+              class="header-title text-[40px] lg:text-[56px] lg:leading-[70px] font-extrabold leading-[51px] text-left text-customPrimaryDark"
             >
               Maximize skill, minimize budget
             </h1>
