--- a/index.html
+++ b/index.html
@@ -75,67 +75,79 @@
           class="px-4 xl:px-0 sm:px-6 md:px-10 gap-y-10 cards grid grid-cols-[repeat(auto-fit,minmax(280px,1fr))] sm:gap-x-3 sm:gap-y-8 md:gap-y-14 lg:gap-x-[30px] lg:gap-y-20"
         >
           <div
-            class="card rounded-[10px] bg-gradient-to-b from-customGradientOrange to-customGradientPink px-7 pt-6 pb-8"
+            class="card rounded-[10px] bg-gradient-to-b from-customGradientOrange to-customGradientPink px-7 sm:px-8 lg:pt-14 xl:pt-16 pt-6"
           >
-            <p class="text-2xl font-extrabold leading-8 text-white">Check out our most popular courses!</p>
+            <p class="text-2xl font-extrabold leading-8 text-white lg:text-[32px] lg:leading-10">
+              Check out our most popular courses!
+            </p>
           </div>
-          <div class="card bg-white rounded-[10px] px-7 pb-8 pt-14 relative">
+          <div class="flex flex-col items-start card bg-white rounded-[10px] px-7 md:px-8 pb-8 lg:pb-10 pt-14 relative">
             <img src="./dist/assets/icon-animation.svg" alt="" class="absolute h-aut0 -top-6 left-7" />
-            <h2 class="text-xl font-extrabold text-customPrimaryDark">Animation</h2>
-            <p class="leading-[26px] mt-4 text-customPrimaryLight font-medium text-left text-base tracking-[-0.01em]">
+            <h2 class="text-xl font-extrabold lg:text-2xl text-customPrimaryDark">Animation</h2>
+            <p
+              class="leading-[26px] mt-4 text-customPrimaryLight font-medium text-left text-base lg:text-lg tracking-[-0.01em] lg:mb-6"
+            >
               Learn the latest animation techniques to create stunning motion design and captivate our audience.
             </p>
             <button
-              class="mt-6 text-lg font-bold leading-7 transition-colors card-btn text-customPink hover:text-customPinkLight"
+              class="mt-auto text-lg font-bold leading-7 transition-colors card-btn text-customPink hover:text-customPinkLight"
             >
               Get Started
             </button>
           </div>
-          <div class="card bg-white rounded-[10px] px-7 pb-8 pt-14 relative">
+          <div class="flex flex-col items-start card bg-white rounded-[10px] px-7 md:px-8 pb-8 lg:pb-10 pt-14 relative">
             <img src="./dist/assets/icon-design.svg" alt="" class="absolute h-aut0 -top-6 left-7" />
-            <h2 class="text-xl font-extrabold text-customPrimaryDark">Design</h2>
-            <p class="leading-[26px] mt-4 text-customPrimaryLight font-medium text-left text-base tracking-[-0.01em]">
+            <h2 class="text-xl font-extrabold lg:text-2xl text-customPrimaryDark">Design</h2>
+            <p
+              class="leading-[26px] mt-4 lg:text-lg text-customPrimaryLight font-medium text-left text-base tracking-[-0.01em] lg:mb-6"
+            >
               Create beautiful, usable interfaces to help shape the future of how the web looks.
             </p>
             <button
-              class="mt-6 text-lg font-bold leading-7 transition-colors card-btn text-customPink hover:text-customPinkLight"
+              class="mt-auto text-lg font-bold leading-7 transition-colors card-btn text-customPink hover:text-customPinkLight"
             >
               Get Started
             </button>
           </div>
-          <div class="card bg-white rounded-[10px] px-7 pb-8 pt-14 relative">
+          <div class="flex flex-col items-start card bg-white rounded-[10px] px-7 md:px-8 pb-8 lg:pb-10 pt-14 relative">
             <img src="./dist/assets/icon-photography.svg" alt="" class="absolute h-aut0 -top-6 left-7" />
-            <h2 class="text-xl font-extrabold text-customPrimaryDark">Photography</h2>
-            <p class="leading-[26px] mt-4 text-customPrimaryLight font-medium text-left text-base tracking-[-0.01em]">
+            <h2 class="text-xl font-extrabold lg:text-2xl text-customPrimaryDark">Photography</h2>
+            <p
+              class="leading-[26px] mt-4 lg:text-lg text-customPrimaryLight font-medium text-left text-base tracking-[-0.01em] lg:mb-6"
+            >
               Explore critical fundamentals like lighting, composition, and focus to capture exceptional photos.
             </p>
             <button
-              class="mt-6 text-lg font-bold leading-7 transition-colors card-btn text-customPink hover:text-customPinkLight"
+              class="mt-auto text-lg font-bold leading-7 transition-colors card-btn text-customPink hover:text-customPinkLight"
             >
               Get Started
             </button>
           </div>
-          <div class="card bg-white rounded-[10px] px-7 pb-8 pt-14 relative">
+          <div class="flex flex-col items-start card bg-white rounded-[10px] px-7 md:px-8 pb-8 lg:pb-10 pt-14 relative">
             <img src="./dist/assets/icon-crypto.svg" alt="" class="absolute h-aut0 -top-6 left-7" />
-            <h2 class="text-xl font-extrabold text-customPrimaryDark">Crypto</h2>
-            <p class="leading-[26px] mt-4 text-customPrimaryLight font-medium text-left text-base tracking-[-0.01em]">
+            <h2 class="text-xl font-extrabold lg:text-2xl text-customPrimaryDark">Crypto</h2>
+            <p
+              class="leading-[26px] mt-4 lg:text-lg text-customPrimaryLight font-medium text-left text-base tracking-[-0.01em] lg:mb-6"
+            >
               All you need to know to get started investing in crypto. Go from beginner to advanced with this 54 hour
               course.
             </p>
             <button
-              class="mt-6 text-lg font-bold leading-7 transition-colors card-btn text-customPink hover:text-customPinkLight"
+              class="mt-auto text-lg font-bold leading-7 transition-colors card-btn text-customPink hover:text-customPinkLight"
             >
               Get Started
             </button>
           </div>
-          <div class="card bg-white rounded-[10px] px-7 pb-8 pt-14 relative">
+          <div class="flex flex-col items-start card bg-white rounded-[10px] px-7 md:px-8 pb-8 lg:pb-10 pt-14 relative">
             <img src="./dist/assets/icon-animation.svg" alt="" class="absolute h-aut0 -top-6 left-7" />
-            <h2 class="text-xl font-extrabold text-customPrimaryDark">Business</h2>
-            <p class="leading-[26px] mt-4 text-customPrimaryLight font-medium text-left text-base tracking-[-0.01em]">
+            <h2 class="text-xl font-extrabold lg:text-2xl text-customPrimaryDark">Business</h2>
+            <p
+              class="leading-[26px] mt-4 lg:text-lg text-customPrimaryLight font-medium text-left text-base tracking-[-0.01em] lg:mb-6"
+            >
               A step-by-step playbook to help you start, scale, and sustain your business without outside investment.
             </p>
             <button
-              class="mt-6 text-lg font-bold leading-7 transition-colors card-btn text-customPink hover:text-customPinkLight"
+              class="mt-auto text-lg font-bold leading-7 transition-colors card-btn text-customPink hover:text-customPinkLight"
             >
               Get Started
             </button>
