--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         </div>
         <header class="header flex flex-col md:flex-row gap-[46px] relative">
           <div
-            class="flex flex-col items-start px-4 pt-[38px] sm:pt-[99px] lg:pt-[178px] header-container sm:px-6 md:px-0 md:pl-10 xl:px-0 md:pb-[186px] lg:pb-[210px] md:w-[440px] lg:w-[500px]"
+            class="flex flex-col items-start px-4 pt-[38px] sm:pt-[99px] lg:pt-[178px] header-container sm:px-6 md:px-0 md:pl-10 xl:px-0 md:pb-[186px] lg:pb-[210px] xl:pb-[226px] md:w-[440px] lg:w-[500px]"
           >
             <h1
               class="header-title text-[40px] lg:text-[56px] lg:leading-[70px] font-extrabold leading-[51px] text-left text-customPrimaryDark"
@@ -155,7 +155,7 @@
         </div>
       </div>
       <footer
-        class="footer h-[120px] w-full flex items-center justify-center px-4 sm:px-6 md:px-10 xl:px-0 bg-customPrimaryDark mt-20"
+        class="footer h-[120px] w-full flex items-center justify-center px-4 sm:px-6 md:px-10 xl:px-0 bg-customPrimaryDark mt-20 md:mt-[86px] lg:mt-[140px]"
       >
         <div class="md:max-w-[1100px] flex justify-between w-full items-center">
           <div class="img-container logo-light">
